write all tests for use CLI sub command

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 // - Write a revshell payload that works on legacy systems like Metasploitable2(nc mkifo, done)
 - Write a full test suite and refactor as much as possible at this early stage, remove all TODOs
+  // - Write initial lib tests
+  - Write initial CLI tests
 - Improve user CLI experience, add the "use X(1)" functionality, make tables look better for "show payloads", etc
