--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@
   // - Write initial CLI tests
 - Improve user CLI experience, add the "use X(1)" functionality, make tables look better for "show payloads", etc
   // - print module stats on boot
-  - use 1 functionality
+  // - use 1 functionality
   - make `help` display properly
+  - info working for module paths not just currently selected
   - make show/info tables look better
