--- a/TODO
+++ b/TODO
@@ -6,8 +6,8 @@
   // - print module stats on boot
   // - use 1 functionality
   // - make `help` display properly
-- Refactoring
-  - go through all TODOs and fix up
+// - Refactoring
+  // - go through all TODOs and fix up
 
 Future:
 - get a basic auxiliary module setup, if only to have the groundwork for more to be added
